@@ -1,3 +1,9 @@
+Sat Jun 02 12:23:21 GMT 2012  Olly Betts <olly@survex.com>
+
+	* INSTALL,Makefile.am,cgiparam.cc,configfile.cc,configure.ac,
+	  htmlparse.cc,omindex.cc,query.cc: Change `...' quoting in prose to
+	  '...'.
+
 Thu May 17 12:53:07 GMT 2012  Olly Betts <olly@survex.com>
 
 	* htmlparsetest.cc,myhtmlparse.cc,myhtmlparse.h: Change parsing of
